// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Paragraph /> defaults to the correct HTML element renders the correct element for <Paragraph variant={body} /> 1`] = `
<body>
  <div>
    <p
      class="paragraph body"
    >
      Example
    </p>
  </div>
</body>
`;

exports[`<Paragraph /> defaults to the correct HTML element renders the correct element for <Paragraph variant={extra-small} /> 1`] = `
<body>
  <div>
    <p
      class="paragraph extra-small"
    >
      Example
    </p>
  </div>
</body>
`;

exports[`<Paragraph /> defaults to the correct HTML element renders the correct element for <Paragraph variant={intro-lede} /> 1`] = `
<body>
  <div>
    <p
      class="paragraph intro-lede"
    >
      Example
    </p>
  </div>
</body>
`;

exports[`<Paragraph /> defaults to the correct HTML element renders the correct element for <Paragraph variant={small} /> 1`] = `
<body>
  <div>
    <p
      class="paragraph small"
    >
      Example
    </p>
  </div>
</body>
`;
